--- a/src/app/components/ui-settings/ui-settings.component.scss
+++ b/src/app/components/ui-settings/ui-settings.component.scss
@@ -37,6 +37,7 @@
   border-top-left-radius: unset;
   align-items: flex-start;
   justify-content: flex-start;
+  z-index: 1;
 
   .settings-menu {
     z-index: 10;
